# general-tree-cxx

./: .clang-format  .gitignore  CMakeLists.txt  cpp.hint  general-tree.h
.github/: pull_request_template.md
.github/workflows/: test.action.yml
test/: doctest.h  test.cpp
test/specs/: clear.test.cpp  constructors.test.cpp  create-root.test.cpp  delete-node.test.cpp  insert-left-child.test.cpp  insert-right-sibling.test.cpp  node.test.cpp  operators.test.cpp
test/utils/fixtures/: counter.fixture.h  lifecycle-counter.fixture.h
test/utils/helpers/: seed-tree.cpp  seed-tree.h
